--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Matemasie&family=New+Amsterdam&display=swap" rel="stylesheet">
     <title>em busca da cidade perdida</title>
  </head>
  <body>
     <main>
-        <div>
+        <div class="passo ativo" id="passo-0">
             <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui- las!</p>
-     
+     <button class="btn-proximo"data-proximo= “1”>rio de janeiro</button>
+     <button class="btn-proximo"data-proximo= “2”>paraguai</button>
         </div>
+        <div class="passo" id="passo-0">
+            <p>Você começa sua jornada no interior de Sao Paulo, subindo um Pico</p>
+     <button class="btn-proximo"data-proximo= “3”>procurar a pista no topo do pico</button>
+     <button class="btn-proximo"data-proximo= “4”>desistir e voltar para casa</button>
+       </div>  
     </main>
+    <script src="script.js"></script>
 
 
 
